--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-/app/Config/database.php
-
+/app/Config
+/app/tmp
+/lib/Cake/Console/Templates/skel/tmp/
+/plugins
+/vendors
+/build
+/dist
+.DS_Store
+/tags
